correct example init

--- a/example/app.json
+++ b/example/app.json
@@ -1,11 +1,4 @@
 {
-  "expo": {
-    "name": "example",
-    "slug": "example",
-    "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
-  },
-  "name": "example"
+  "name": "example",
+  "displayName": "example"
 }
