--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "author": "Ludvig Larsendahl",
   "license": "MIT",
   "private": false,
-  "devDependencies": {},
-  "dependencies": {},
-  "peerDependencies": {
+  "devDependencies": {
+    "@types/react": "^17.0.19",
+    "typescript": "^4.4.2"
+  },
+  "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "react": "^17.0.2",
     "recoil": "^0.4.1"
+  },
+  "scripts": {
+    "build": "yarn tsc --project ./tsconfig.json"
   }
 }
